monticore-generator/src/test/resources/cocos/invalid/A4090/A4090g.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4090;

grammar A4090g extends mc.grammars.literals.TestLiterals{

  A = "a";
  B = who:Num_Int who:A;

}
